<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_gravity="center"
>

    <CheckBox
            android:text="@string/has_changed_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activity_resetCollect_checkBox"
            android:layout_marginTop="64dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textSize="24sp"
    />

    <Button
            android:text="@string/reset_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activity_resetCollect_button"
            android:layout_marginTop="64dp"
            android:layout_gravity="center_vertical|center_horizontal"
            app:cornerRadius="24dp"
            android:textSize="24sp"
            android:padding="16dp"
            android:background="@color/orange"
    />

    <TextView android:id="@+id/activity_resetCollect_textView_success"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/reset_stock_return_home"
              android:layout_marginTop="128dp"
              android:textSize="24sp"
              android:layout_gravity="center_vertical|center_horizontal"
    />

</LinearLayout>
