<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.step4.ChoiceFragment">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" >

        <TextView
                android:id="@+id/text_choice_explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textSize="36sp"
                android:text="@string/main_choice_title"
        />

        <Button
                android:id="@+id/button_main_choice_deposit"
                android:text="@string/main_choice_button_deposit"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_gravity="center_vertical|center_horizontal"
                app:cornerRadius="24dp" android:textSize="20sp" android:padding="16dp"
        />

        <Button
                android:id="@+id/button_main_choice_finish"
                android:text="@string/main_choice_button_finish"
                android:layout_width="400dp"
                android:layout_marginTop="48dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                app:cornerRadius="24dp" android:textSize="20sp" android:padding="16dp"
        />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
