<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <FrameLayout
            android:id="@+id/frameLayout_debugMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="320dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/layout_border"
    >

        <TextView
                android:id="@+id/textView_arduino_debug_message"
                android:layout_width="300dp"
                android:layout_height="200dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@android:color/darker_gray"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:scrollbars="vertical"
                android:width="10dp"
        />

        <TextView
                android:text="@string/arduino_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_debug_title"
                android:layout_marginStart="450dp"
                android:textStyle="bold" android:textSize="16sp"
        />

        <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText_sendArduino"
                android:layout_marginStart="350dp"
                android:layout_marginTop="50dp"
                android:autofillHints=""
                android:inputType="text"
                tools:ignore="LabelFor"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arduino_action_send"
                android:id="@+id/button_sendArduino"
                android:layout_marginStart="500dp"
                android:layout_marginTop="50dp"
        />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arduino_action_status"
                android:id="@+id/button_statusArduino"
                android:layout_marginStart="350dp"
                android:layout_marginTop="130dp"
        />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arduino_action_check"
                android:id="@+id/button_checkArduino"
                android:layout_marginStart="450dp"
                android:layout_marginTop="130dp"
        />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arduino_action_open"
                android:id="@+id/button_openArduino"
                android:layout_marginStart="350dp"
                android:layout_marginTop="210dp"
        />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arduino_action_close"
                android:id="@+id/button_closeArduino"
                android:layout_marginStart="450dp"
                android:layout_marginTop="210dp"
        />
    </FrameLayout>

    <include layout="@layout/content_main" />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:layout_editor_absoluteX="119dp"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="72dp">
        <TextView
                android:text="@string/main_bottomBar_support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView_contact_support"
                android:gravity="bottom|center_horizontal"
                android:layout_gravity="bottom"
        />
    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.google.android.material.bottomappbar.BottomAppBar
                android:id="@+id/bottomAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:paddingStart="40dp"
                android:paddingLeft="40dp"
                android:paddingEnd="40dp"
                android:paddingRight="40dp"
                app:fabAlignmentMode="center"
        >

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                <ImageView
                        android:id="@+id/bottomAppBar_prev"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_margin="10dp"
                        app:tint="@color/green"
                        android:src="@drawable/icon_back"
                        android:contentDescription="@string/previous"
                        android:visibility="gone"
                />
                <TextView
                        android:id="@+id/bottomAppBar_prev_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/previous"
                        android:textColor="@color/green"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:visibility="gone"
                />

                <RelativeLayout
                        android:id="@+id/relative"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="64dp"
                        android:layout_marginEnd="64dp"
                >

                    <ImageView
                            android:id="@+id/bottomAppBar_home"
                            android:layout_width="42dp"
                            android:src="@drawable/ic_home_black_24dp"
                            app:tint="@color/green"
                            android:contentDescription="@string/main_bottomBar_home"
                            android:layout_centerHorizontal="true"
                            android:layout_height="42dp"
                            android:visibility="gone"
                    />

                    <TextView
                            android:id="@+id/bottomAppBar_home_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/bottomAppBar_home"
                            android:layout_centerInParent="true"
                            android:singleLine="true"
                            android:text="@string/main_bottomBar_home"
                            android:textColor="@color/green"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:visibility="gone"
                    />
                </RelativeLayout>

                <TextView
                        android:id="@+id/bottomAppBar_labelNext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/next"
                        android:textColor="@color/green"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:visibility="gone"
                />
                <ImageView
                        android:id="@+id/bottomAppBar_next"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_margin="10dp"
                        app:tint="@color/green"
                        android:src="@drawable/icon_next"
                        android:contentDescription="@string/next"
                        android:visibility="gone"
                />

            </LinearLayout>

        </com.google.android.material.bottomappbar.BottomAppBar>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
