<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

    <ImageView
            android:id="@+id/main_image_settings"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_more"
            android:contentDescription="@string/settings_preferences_header"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
    />

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/home"
            android:layout_weight="2"
            android:id="@+id/main_logo_bako"
            android:contentDescription="@string/header_logo_description"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
    />

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="300dp"
            android:gravity="center"
    >

        <Button
                android:text="@string/click_here"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:id="@+id/button_nav_to_scan_box"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="48dp"
                app:cornerRadius="24dp" android:textSize="24sp" android:padding="16dp"
        />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
