<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.step4.VoucherFragment">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" >

        <TextView
                android:id="@+id/main_voucher_step5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="60dp"
                android:background="@drawable/bg_green"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/main_voucher_step"
        />

        <TextView
                android:id="@+id/text_voucher_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textSize="36sp"
                android:text="@string/main_voucher_title"
        />

        <TextView
                android:id="@+id/text_main_voucher_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:text="@string/main_voucher_instruction"
        />

        <ImageView
                android:layout_marginTop="8dp"
                android:src="@drawable/voucher"
                android:layout_width="250dp"
                android:layout_height="0dp"
                android:id="@+id/imageView_main_step5"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:contentDescription="@string/main_voucher_title"
        />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
