<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.step1.ScanBoxFragment">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/main_scanbox_opendrawer_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/green"
                    android:textSize="24sp"
                    android:textStyle="bold"
            />

        </LinearLayout>

        <TextView
                android:text="@string/main_scanbox_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragmentScan_textView_error"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="100dp"
                android:layout_marginStart="100dp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textColor="#F44336"
                android:visibility="gone"
        />

        <Button
                android:text="@string/retry"
                android:layout_width="235dp"
                android:layout_height="wrap_content"
                android:id="@+id/button_nav_retry"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="48dp"
                app:cornerRadius="24dp" android:textSize="24sp"
                android:padding="16dp"
                android:visibility="gone"
        />

        <LinearLayout
                android:layout_marginTop="0dp"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:src="@drawable/scan_box"
                    android:layout_width="500dp"
                    android:layout_height="600dp"
                    android:id="@+id/imageView_step1"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:contentDescription="@string/main_scanbox_image_description"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="50dp"
            />

            <com.journeyapps.barcodescanner.DecoratedBarcodeView
                    android:id="@+id/barcode_view_box"
                    android:layout_width="550dp"
                    android:layout_height="400dp"
                    android:layout_weight="1"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="80dp"
                    android:layout_gravity="center"
            >
            </com.journeyapps.barcodescanner.DecoratedBarcodeView>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="119dp"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="72dp">
        <TextView
                android:text="@string/main_bottomBar_support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_contact_support"
                android:gravity="bottom|center_horizontal"
                android:layout_gravity="bottom"
        />
    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/bottomAppBarParent">

        <com.google.android.material.bottomappbar.BottomAppBar
                android:id="@+id/bottomAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:paddingStart="40dp"
                android:paddingLeft="40dp"
                android:paddingEnd="40dp"
                android:paddingRight="40dp"
                app:fabAlignmentMode="center"
        >

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                <RelativeLayout
                        android:id="@+id/relative"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="64dp"
                        android:layout_marginEnd="64dp"
                >

                    <ImageView
                            android:id="@+id/bottomAppBar_home"
                            android:layout_width="42dp"
                            android:src="@drawable/ic_home_black_24dp"
                            app:tint="@color/green"
                            android:contentDescription="@string/main_bottomBar_home"
                            android:layout_centerHorizontal="true"
                            android:layout_height="42dp"
                            android:visibility="gone"
                    />

                    <TextView
                            android:id="@+id/bottomAppBar_home_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/bottomAppBar_home"
                            android:layout_centerInParent="true"
                            android:singleLine="true"
                            android:text="@string/main_bottomBar_home"
                            android:textColor="@color/green"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:visibility="gone"
                    />
                </RelativeLayout>

            </LinearLayout>

        </com.google.android.material.bottomappbar.BottomAppBar>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
